1998-05-15  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (abspath): Also do the "cannot rename" work-around for
	abspath-7d.

1998-05-13  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit_filesdoneproc): Free admin_dir when done with it.

1998-05-13  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (editor): Change bogus sed command, `s/^/x&/g', to `s/^/x/'.
	The former exercised a bug in GNU sed-3.01-beta3.
	(emptydir-8): Add `Rebuilding administrative file database' message,
	since now it does that.
	* commit.c (commit_filesdoneproc): Pass only the admin directory
	pathname to mkmodules.
	Remove #if 0, now that it's fixed.

	* status.c (cvsstatus): Rename from `status' to avoid shadowing
	lots of locals and parameters by the same name.
	* server.c (serve_status): Update caller.
	* main.c (cmds[]): Update table entry.
	* cvs.h: Update prototype.

	* commit.c (commit_filesdoneproc): Remove trailing blanks.
	(commit) [CLIENT_SUPPORT]: Remove unnecessary (and local-shadowing)
	declaration of `err'.
	Rename global `tag' to `saved_tag' to avoid overshadowing `tag'
	parameters of three functions.
	Rename global `message' to `saved_message' to avoid overshadowing
	`message' parameter of a function.
	Rename global `ulist' to `saved_ulist' and move dcl up with others.

1998-05-12  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit_filesdoneproc): #if 0 the new code until it can
	be fixed.

	* commit.c (commit_filesdoneproc): Add comment explaining last
	change.

1998-05-12  Jim Meyering  <meyering@ascend.com>

	* commit.c (commit_filesdoneproc): Call mkmodules not just when
	committing a file directly under CVSROOT, but also when committing
	files in subdirectories of CVSROOT.

1998-05-08  Jim Meyering  <meyering@ascend.com>

	* filesubr.c (xreadlink):  NUL-terminate the symbolic link name.
	Use a much smaller initial buffer length.
	Test errno only if readlink fails.
	Use xstrdup then free the original link name so we don't waste space.
